--- a/HighlightInput/packages.config
+++ b/HighlightInput/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GameOverlay.Net" version="4.2.0" targetFramework="net471" />
   <package id="MouseKeyboardActivityMonitor" version="4.0.5150.10665" targetFramework="net471" />
+  <package id="SharpDX" version="4.2.0" targetFramework="net471" />
+  <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net471" />
+  <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net471" />
 </packages>
