--- a/HighlightInput/HighlightInput.csproj
+++ b/HighlightInput/HighlightInput.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KeyboardOverlay.cs" />
     <Compile Include="MouseOverlay.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
